Completed first version of notebook opt01_t1_1

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 numpy~=1.26.4
 astropy~=6.1.7
 matplotlib~=3.10.0
-scopesim~=0.9.1
 scipy~=1.15.2
-yaml~=0.2.5
 pyyaml~=6.0.2
 pyckles~=0.4.0
 synphot~=1.5.0
@@ -11,17 +9,14 @@ lxml~=5.3.1
 beautifulsoup4~=4.12.3
 soupsieve~=2.5
 packaging~=24.2
-typing_extensions~=4.12.2
 h11~=0.14.0
 defusedxml~=0.7.1
 cffi~=1.17.1
 pillow~=11.1.0
 ipython~=8.30.0
-zlib~=1.2.13
 pip~=24.2
 attrs~=24.3.0
 wheel~=0.44.0
-openssl~=3.0.15
 docutils~=0.19
 tornado~=6.4.2
 jinja2~=3.1.4
@@ -52,3 +47,17 @@ fonttools~=4.55.3
 pyparsing~=3.2.1
 ipykernel~=6.29.5
 kiwisolver~=1.4.8
+ScopeSim~=0.10.0
+ScopeSim_Templates~=0.6.2
+photutils~=2.3.0
+typing_extensions~=4.12.2
+bleach~=6.2.0
+PyQt6~=6.7.1
+PySocks~=1.7.1
+pyerfa~=2.0.1.5
+Brotli~=1.0.9
+charset-normalizer~=3.3.2
+astropy-iers-data~=0.2025.8.11.0.41.9
+more-itertools~=10.7.0
+brotlicffi~=1.0.9.2
+unicodedata2~=15.1.0
